2002-06-21  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* Paperdoll_gump.cc: fixed bug when displaying usecode container
	* objs.cc: zero-weight fix
	* gamewin.cc: display object weight

2002-06-21  Jeff Freedman  <jsf@usf-cf-x86-linux-1>

	* actors.cc (Npc_actor): Cleanup: Lots more dynamic_cast's are gone.

2002-06-21  Darke  <darke@users.sourceforge.net>
	* shapeid.cc: Added using declarations. Committed for Kirben.

2002-06-20  Jeff Freedman  <jsf@usf-cf-x86-linux-1>

	* objs.{cc,h},etc:  Added 'change_frame()' to set repaint area.
	* gamewin.h (public): get_info(), etc. moved to ShapeID.
	* gamewin.h:  Hit pixel, etc. replaced by an array.

2002-06-19  Jeff Freedman  <jeff@amy.nerble.net>

	* shapeid.h (public),etc: New 'Shape_manager' class takes over the
	various .vga files from Game_window.

2002-06-19  Jeff Freedman  <jsf@usf-cf-x86-linux-1>

	* shapeid.cc,etc:  Game_window::get_info(Game_object *) is
	replaced by ShapeID.get_info().
	* Lots:  Cleanup:  Game_window::get_game_window() => get_instance().
	* Lots:  ::as_actor() replaces lots of dynamic_cast's.

2002-06-19  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* data/bg/*, gumps/Paperdoll_gump_info.cc: new art by Oblivious

2002-06-18  Dominik Reichardt <gigdr@tesionmail.de>
	* data/bg/defaultkeys.txt: mapped ctrl-c to copy and 
	  INSERT to "create item
	* data/si/defaultkeys.txt: the same
	* docs/xml/docs.xml, faq.xml : updated
	* docs/readme.html, faq.html : updated
	* readme/FAQ : updated

2002-06-13 Simon Quinn <email@simonquinn.co.uk>
	* Fixed sound crashing on startup and in-game when sound was disabled

2002-06-13  Ryan Nunn  <triforce@merlin.net.au>
	* exult.cc, audio/xmidi.cc : Getting around some problems with (our)
	  snprintf not supporting floating point types.

2002-06-13  Ryan Nunn  <triforce@merlin.net.au>
	* Any file that I changed, but not the 2 below : Changed lots of things
	  to use DataSources rather than directly use streams. Hopefully