@@ -55,7 +55,7 @@ int Jawbone_gump::add(Game_object *obj, int mx, int my,	int sx, int sy,
 void Jawbone_gump::paint(Game_window *gwin)
 {
 	// Paint gump itself
-	gwin->paint_shape(x, y, *this);
+	paint_shape(x, y);
 
 	// Paint red "checkmark".
 	check_button->paint(gwin);
@@ -78,7 +78,7 @@ void Jawbone_gump::paint_tooth(Game_window* gwin, int index)
 	int objx = toothx[index];
 	int objy = toothy[index];
 
-	gwin->paint_shape(x + objx, y + objy, shape);
+	shape.paint_shape(x + objx, y + objy);
 }
 
 Game_object *Jawbone_gump::find_object(int mx, int my)
